--- a/app/views/authentication/users/new.html.erb
+++ b/app/views/authentication/users/new.html.erb
@@ -21,8 +21,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :password, "Repetir Contraseña:" %>
-    <%= form.password_field :password %>
+    <%= form.label :password_confirmation, "Repetir Contraseña:" %>
+    <%= form.password_field :password_confirmation %>
   </div>
 
   <div>
