--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,9 @@
 
 
 <body>
-  
+  <header>
+      <%= render 'shared/navegation' %>
+  </header>
 <main>
   <ol type="A" style="display: inline-block">
     <p class="maquina-escribir"> ........................................ <strong style="color: white">BitMed.</strong><span class="cursor">|</span></p>
