--- a/app/views/consults/index.html.erb
+++ b/app/views/consults/index.html.erb
@@ -17,7 +17,7 @@
         <td>
           <%= link_to 'Ver', [@patient, consult] %> |
           <%= link_to 'Editar', edit_patient_consult_path(@patient, consult) %> |
-          <%= link_to 'Eliminar', [@patient, consult], method: :delete, data: { confirm: '¿Estás seguro?' } %>
+          <%= link_to 'Eliminar', [@patient, consult], method: :destroy, data: { confirm: '¿Estás seguro?' } %>
         </td>
       </tr>
     <% end %>
