--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,8 @@
     
      <!-- %= image_tag 'logo.jpg', class: 'logo', id: 'logo_first' %> -->
 
-    <header>
-      <div class="interior">
-      <!--  <a href="" class="logo"><img src="images/logo.png" alt=""></a> -->
-
-        <%= render 'shared/navegation' %>
+    
+</nav>
         <%= render 'shared/flash' %>
       </div>
     </header>
