--- a/app/views/shared/_navegation.html.erb
+++ b/app/views/shared/_navegation.html.erb
@@ -1,14 +1,8 @@
 <nav class="navegation">
     <ul>
         <li><a href="/">Inicio</a></li>
-        <li>
-              <a href="Funciones">Funciones</a>
-              <ul>
-                <li><%= link_to 'Pacientes', patients_path %></li>
-              </ul>
-            </li>
-            <li><a href="Contacto">Contacto</a></li>
-            <li><a href="Base de datos">Base de datos</a></li>
-            <li><%= link_to 'Log in', new_authentication_session_path %></li>
+        <li><a href="Quienes somos">Quienes somos</a></li>
+        <li><a href="Contacto">Contacto</a></li>
+        <li><%= link_to 'Log in', new_authentication_session_path %></li>
     </ul>
 </nav>
