--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,10 @@
 
 
 :root {
-  --color-background: #09252c;
-  --color-primary: #8b8484;
-  --color-secondary: rgb(89, 89, 89);
-  --color-text-off: #0e3742;
+  --color-background: #95eaff;
+  --color-primary: #ffffff;
+  --color-secondary: rgb(255, 255, 255);
+  --color-text-off: #00c6fd;
   --color-text-on: #fff;
   --color-text: #f9f9f9ac;
   --color-text-shadow: #03bcf4;
