--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bitmed</title>
-       <h1>Bitmed</h1>
-
-    <%= javascript_include_tag 'application' %>
+   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <title>Bitmed</title>
+    <h1>Bitmed</h1>
 
 
     
   </head>
 
-  <body>
-    
-     <!-- %= image_tag 'logo.jpg', class: 'logo', id: 'logo_first' %> -->
+  <body> 
 
-    
+    <label for="toggle" id="label_toggle"><i class="far fa-moon"></i></label>
+    <input type="checkbox" id="toggle">
+    <div class="content">
+
+    <!-- %= image_tag 'logo.jpg', class: 'logo', id: 'logo_first' %> -->
+
 </nav>
-        <%= render 'shared/flash' %>
-      </div>
+    <%= render 'shared/flash' %>
+    </div>
+    
     </header>
+    
     <%= yield %>
+
+    <%= javascript_include_tag 'application' %>
+
   </body>
 </html>
