--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -36,7 +36,11 @@
 <%
 =end%>
             </ul>
-        </li>
-        <li><%= link_to 'Log in', new_authentication_session_path %></li>
+        <%
+=begin%>
+ </li>
+        <li><%= link_to 'Log in', new_authentication_session_path %></li> 
+<%
+=end%>
     </ul>
 </nav>
