--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,20 @@
-
-
-
-
 <body>
   <header>
+  <% if user_signed_in? %>
+      <%= render 'shared/sidebar' %>
+      <%= render 'shared/usersettings' %>
+  <% else %>
       <%= render 'shared/navegation' %>
+  <% end %>
   </header>
-<main>
-  
-  
-</main>
+
+  <main>
 
 
-
+  </main>
 
   <footer>
   <p>Copyright &copy;</p>
   </footer>
-
 </body>
 </html>
