--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -2,6 +2,7 @@
 <h3><%=  t('.title') %></h3>
 
 <!DOCTYPE html>
+
 <html>
 <head>
 
@@ -10,9 +11,9 @@
 <body>
 
  <header>
-  
-  <header>
-    <h2>Crear nuevo paciente</h2>
+ <%= render 'shared/sidebar' %>
+
+     <h2>Crear nuevo paciente</h2>
   </header>
 
   <main>
@@ -58,14 +59,14 @@
         <% form.number_field :phone %>
       </div>
 
-      
+
     <h3>Composicion familiar</h3>
 
       <div class="field">
         <% form.label :house, "Vivienda" %>
         <%= form.select :house, ["Casa", "Departamento", "Villa", "Calle"] %>
 
-      
+
     <h3>Habitos</h3>
     <h3>Antecedentes familiares</h3>
     <h3>Antecedentes personales</h3>
@@ -76,8 +77,7 @@
   </main>
 
   <footer>
-    
+
   </footer>
 </body>
 </html>
-
